# ProjInt_Mercado-backend

./: .env_exemplo  .pdm-python  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
mercado/: admin.py  models.py  serializers.py  views.py
mercado/migrations/: 0001_initial.py  0002_carne_capa.py  0002_marca_rename_descricao_categoria_nome.py  0003_laticínio_carne.py  0003_verdura_capa.py  0004_fruta.py  0004_marca_capa.py  0005_fruta_capa.py  0005_remove_fruta_quantidade.py  0006_bebida_capa.py  0006_legume.py  0007_bebida_descricao_alter_bebida_preco_and_more.py  0007_verdura.py  0008_marca_categorias.py  0008_remove_bebida_descricao.py  0009_carne_descricao.py  0009_remove_marca_categorias_remove_carne_marca_and_more.py  0010_bebida_descricao_fruta_descricao.py  0010_remove_laticínio_marca_bebida_laticínio_marca.py  0011_remove_bebida_categoria_remove_carne_categoria_and_more.py
mercado/models/: __init__.py  bebida.py  carne.py  fruta.py  laticinio.py  legume.py  marca.py  verdura.py
mercado/serializers/: bebida.py  carne.py  categoria.py  fruta.py  laticinio.py  legume.py  marca.py  verdura.py
mercado/views/: bebida.py  carne.py  categoria.py  fruta.py  laticinio.py  legume.py  marca.py  verdura.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
