[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Raphael-Otto",email = "Raphaelotto.RO@gmail.com"},
]
dependencies = [
    "django>=4.2.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"


[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"

