[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Raphael-Otto",email = "Raphaelotto.RO@gmail.com"},
]
dependencies = [
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.2.0",
    "djangorestframework-simplejwt>=5.3.0",
    "setuptools>=68.2.2",
    "django>=4.2.6",
    "python-magic>=0.4.27",
    "Pillow>=10.1.0",
    "gunicorn>=21.2.0",
    "whitenoise[brotli]>=6.6.0",
    "python-dotenv>=1.0.0",
    "netifaces>=0.11.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"
